--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,9 @@
 
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="main_fragment_discover">Discover</string>
+    <string name="main_fragment_order">Order Again</string>
+    <string name="main_fragment_favorites">Favorites</string>
 
     <string name="api_key">MDplN2Y5YTk1Yy0zNzJmLTExZTctYTBjZi1lZmFlNmMyYmFlY2U6ZDlTcWtYWEFhb0FUdU9vMFVPOFdTUXMwYWRUQUxkdnhLcG1v</string>
 </resources>
