--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="main_fragment_favorites">Favorites</string>
 
     <string name="api_key">MDplN2Y5YTk1Yy0zNzJmLTExZTctYTBjZi1lZmFlNmMyYmFlY2U6ZDlTcWtYWEFhb0FUdU9vMFVPOFdTUXMwYWRUQUxkdnhLcG1v</string>
+
+    <!--USER PREFERENCES-->
+    <string name="preferences">qt_prefs</string>
+    <string name="user_id">USER_ID</string>
 </resources>
