--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
         <item>Default</item>
         <item>Price</item>
         <item>Volume</item>
+        <item>Name A-Z</item>
     </string-array>
 
 
