--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
         <item>Price</item>
         <item>Volume</item>
         <item>Name A-Z</item>
+        <item>Name Z-A</item>
     </string-array>
 
 
